# meeting-analyzer

./: .gitignore  README.md  pyproject.toml  pytest.ini  requirements.txt  run_gui.bat  verify_imports.py
src/meeting_id/: __init__.py  asr.py  audio.py  checks.py  cli.py  diarize.py  embed.py  eval.py  gui.py  io.py  pipeline.py
tests/: test_cli_eval_manifest.py  test_eval_metrics.py  test_output_schema_smoke.py
