[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "meeting_id"
version = "0.1.0"
description = "Offline Turkish meeting diarization and target speaker detection"
authors = [{name = "Antigravity"}]
dependencies = [
    "torch",
    "torchaudio",
    "whisperx",
    "speechbrain",
    "soundfile",
    "numpy",
    "scipy"
]
requires-python = ">=3.8"

[project.scripts]
meeting-id = "meeting_id.cli:main"
meeting-gui = "meeting_id.gui:main"
